--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -4,5 +4,5 @@ j2ee.server.domain=C:/WebDevs/glassfish-4.1.2/glassfish/domains/domain1
 j2ee.server.home=C:/WebDevs/glassfish-4.1.2/glassfish
 j2ee.server.instance=[C:\\WebDevs\\glassfish-4.1.2\\glassfish;C:\\WebDevs\\glassfish-4.1.2\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
 j2ee.server.middleware=C:/WebDevs/glassfish-4.1.2
-selected.browser=Chrome
+selected.browser=SL[/Browsers/FirefoxBrowser
 user.properties.file=C:\\Users\\Honza\\AppData\\Roaming\\NetBeans\\11.2\\build.properties
